<resources>
    <string name="app_name">Souvenarius</string>

    <!-- Main activity -->
    <string name="main_connectivity_error_message">No internet access available. Please connect and try again.</string>
    <string name="main_connection_warning">Offline mode</string>
    <string name="error_message_offline_mode">Offline mode. You can browse offline content, but no changes possible.</string>
    <string name="content_desc_main_add_souvenir">Add souvenir</string>

    <!-- Add fragment -->
    <string name="content_desc_photo_preview">Photo preview</string>
    <string name="hint_title_add">Title…</string>
    <string name="hint_story_add">Your story here…</string>
    <string name="hint_location_add">Location…</string>
    <string name="hint_location_error_add">Location (could not autodetect)…</string>
    <string name="format_location_add" translatable="false">%s, %s</string>
    <string name="error_message_add_temp_file">Could not allocate temporary file.</string>
    <string name="error_message_add_missing_values">There are missing values. Please input them.</string>
    <string name="success_message_add_souvenir_saved">Souvenir successfully saved.</string>
    <string name="error_message_souvenir_not_saved">Souvenir could not be saved.</string>
    <string name="error_message_add_no_photo_app">No photo app available.</string>
    <string name="take_photo_add">Tap here to take a photo!</string>
    <string name="btn_add_save_souvenir">Save souvenir</string>
    <string name="error_message_add_no_connection">No internet connection. Cannot add souvenir.</string>

    <!-- Main fragment -->
    <string name="souvenir_list_error_message">There are no souvenirs. Go get some :)!</string>
    <string name="menu_main_sign_out">Sign out</string>
    <string name="menu_main_sort_by_date_asc_desc">Sort by date asc/desc</string>
    <string name="main_toast_sort_asc">Sort by date ascending</string>
    <string name="main_toast_sort_desc">Sort by date descending</string>
    <string name="content_desc_main_item_souvenir_photo">Souvenir photo</string>
    <string name="error_message_main_no_connection">No internet connection. Cannot refresh data.</string>
    <string name="main_searchButtonLabel">Search</string>
    <string name="main_sortButtonLabel">Sort</string>
    <string name="main_numSouvenirs">Souvenirs: %1$s</string>
    <string name="main_numSouvenirsError">Souvenirs: -</string>

    <!-- Detail fragment -->
    <string name="content_desc_item_detail_photo">Souvenir photo</string>
    <string name="content_desc_detail_delete_photo">Delete photo</string>
    <string name="menu_detail_add_a_photo">Add a photo</string>
    <string name="menu_detail_delete_souvenir">Delete souvenir…</string>
    <string name="error_message_detail_no_connection">No internet connection. No changes possible.</string>
    <string name="num_photos_detail">Photos: %s</string>
    <string name="dialog_positive_label_detail">YES</string>
    <string name="dialog_negative_label_detail">NO</string>
    <string name="dialog_souvenir_deletion_title_detail">Souvenir deletion</string>
    <string name="dialog_souvenir_deletion_message_detail">Really delete this souvenir?</string>
    <string name="dialog_photo_deletion_title_detail">Photo deletion</string>
    <string name="dialog_photo_deletion_message_detail">Really delete this photo?</string>
    <string name="label_edit_dialog">Edit the %s</string>
    <string name="btn_edit_dialog_save">Save</string>
    <string name="btn_edit_dialog_cancel">Cancel</string>
    <string name="success_message_detail_photo_added">Photo successfully added.</string>
    <string name="error_message_detail_photo_not_added">Photo could not be added.</string>
    <string name="error_message_detail_photo_cancelled">Cancelled taking photo.</string>
    <string name="error_message_detail_fail_temp_file_allocation">Could not allocate temporary file.</string>
    <string name="error_message_detail_edit_dialog_no_connection">No internet connection. Cannot edit.</string>
    <string name="label_title_detail">Title</string>
    <string name="label_place_detail">Place</string>
    <string name="label_story_detail">Story</string>
    <string name="label_edit_detail">edit</string>
    <string name="menu_detail_share_souvenir">Share souvenir…</string>
    <string name="share_dialog_title_detail">Share Souvenir</string>

    <!-- Sign in fragment -->
    <string name="sign_in_notice_no_internet">You need to sign in to use the app. Please also make sure you\'re connected to the internet.</string>
    <string name="sign_in_notice">You need to sign in to use the app.</string>
    <string name="btn_label_sign_in">Sign in</string>
    <string name="btnlabel_signin_create">Create account</string>
    <string name="hint_sign_in_email">Email Address</string>
    <string name="hint_sign_in_password">Password</string>
    <string name="error_message_sign_in_invalid_email">Invalid Email</string>
    <string name="error_message_sign_in_empty_email_error">Empty email not allowed.</string>
    <string name="error_message_sign_in_empty_password_error">Empty password not allowed.</string>

    <!-- Create account fragment -->
    <string name="btnlabel_createaccount_create">Create Account</string>
    <string name="hint_createaccount_email">Email</string>
    <string name="hint_createaccount_password">Password</string>

    <!-- Search Fragment -->
    <string name="error_message_search_missing_title">Missing title</string>
    <string name="error_message_search_missing_place">N/A</string>
    <string name="error_message_search_missing_date">Unknown</string>
    <string name="hint_search_search_for_title">Search for title…</string>
    <string name="search_iconcontentdesc">Souvenir thumbnail</string>
    <string name="search_errorIconContentDec">Error icon</string>
    <string name="error_message_search_no_results">No results. Please try searching again.</string>

    <!-- Widget -->
    <string name="content_desc_widget_souvenir_photo">Souvenir photo</string>
    <string name="content_desc_widget_add_souvenir">Add souvenir</string>
    <string name="error_message_widget_no_souvenirs">No souvenirs</string>
    <string name="error_message_widget_not_signed_in">Not signed in</string>

    <!-- Location repository -->
    <string name="error_message_location_repo_no_device_location">Cannot get device location.</string>
    <string name="error_message_location_repo_missing_permission">Missing permission for fetching location.</string>
    <string name="error_message_location_repo_no_matching_address">No matching address.</string>
    <string name="error_message_location_repo_error_fetching_location">There was an error fetching the location.</string>

    <!-- Souvenir repository -->
    <string name="error_message_souvenir_repo_not_logged_in">Not signed in.</string>
    <string name="error_message_souvenir_repo_no_souvenirs_found_on_query">No matches for given query.</string>

    <!-- Firebase Handler -->
    <string name="error_message_firebase_not_signed_in">Not signed in.</string>
    <string name="error_message_firebase_already_executing">Already executing request.</string>
</resources>
