<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickListener"
            type="me.worric.souvenarius.ui.createaccount.CreateAccountFragment.ClickListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_createaccount_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_createaccount_email"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_createaccount_password"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_createaccount_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/hint_createaccount_password"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_createaccount_create"
            app:layout_constraintTop_toBottomOf="@+id/et_createaccount_email" />

        <Button
            android:id="@+id/btn_createaccount_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_createaccount_password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> clickListener.onCreateAccountClicked(etCreateaccountEmail.text.toString.trim, etCreateaccountPassword.text.toString.trim)}"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btnlabel_createaccount_create" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
