<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="me.worric.souvenarius.ui.detail.DetailViewModel" />
        <variable
            name="clickHandler"
            type="me.worric.souvenarius.ui.detail.DetailFragment.EditClickListener" />
        <variable
            name="currentSouvenir"
            type="me.worric.souvenarius.data.model.SouvenirDb" />
    </data>
    <ScrollView
        android:id="@+id/sv_detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        tools:context=".ui.main.MainActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_souvenir_photo_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:nestedScrollingEnabled="false"
                android:focusableInTouchMode="false" />

            <TextView
                android:id="@+id/tv_detail_num_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_souvenir_photo_list"
                app:layout_constraintStart_toStartOf="@+id/rv_souvenir_photo_list"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_timestamp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:chainUseRtl="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="italic"
                android:text="@{@string/num_photos_detail(currentSouvenir.photos.size)}"
                android:drawableStart="@drawable/ic_photo_detail"
                android:drawablePadding="2dp"
                android:gravity="center_vertical"
                tools:text="Photos: 2" />

            <TextView
                android:id="@+id/tv_detail_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_num_photos"
                app:layout_constraintEnd_toEndOf="@+id/rv_souvenir_photo_list"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_detail_num_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="italic"
                android:text="@{currentSouvenir.formattedTimestamp}"
                android:drawableStart="@drawable/ic_event"
                android:drawablePadding="2dp"
                android:gravity="center_vertical"
                tools:text="@tools:sample/date/mmddyy" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier_photos_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tv_detail_num_photos,tv_detail_timestamp"
                app:barrierDirection="bottom" />

            <TextView
                android:id="@+id/tv_detail_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/barrier_photos_timestamp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:fontFamily="sans-serif-condensed"
                android:drawableStart="@drawable/ic_edit_detail"
                android:drawablePadding="2dp"
                android:gravity="bottom"
                android:onClick="@{clickHandler::onEditClicked}"
                android:text="@string/label_title_detail" />

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@{currentSouvenir.title}"
                android:maxLines="2"
                android:ellipsize="end"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_detail_label_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="sans-serif-condensed"
                android:drawableStart="@drawable/ic_edit_detail"
                android:drawablePadding="2dp"
                android:gravity="bottom"
                android:text="@string/label_place_detail"
                android:onClick="@{clickHandler::onEditClicked}" />

            <TextView
                android:id="@+id/tv_detail_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_place"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@{currentSouvenir.place}"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_detail_label_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_place"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_story_detail"
                android:fontFamily="sans-serif-condensed"
                android:drawableStart="@drawable/ic_edit_detail"
                android:drawablePadding="2dp"
                android:gravity="bottom"
                android:onClick="@{clickHandler::onEditClicked}" />

            <TextView
                android:id="@+id/tv_detail_story"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="12dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_story"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{currentSouvenir.story}"
                tools:text="@tools:sample/lorem/random" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
